<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/white"
              android:layout_height="240dp">

    <RelativeLayout
        android:id="@+id/rlAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivAllFile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:layout_margin="10dp"
            android:src="@drawable/menuicon_file"
            />

        <TextView
            android:id="@+id/tvAllFileName"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/txt_all_file"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/ivAllChecked"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_toRightOf="@+id/ivAllFile"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/ivAllChecked"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/checked"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/public_dividing_line1"
        />

    <RelativeLayout
        android:id="@+id/rlSD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivSD"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:layout_margin="10dp"
            android:src="@drawable/menuicon_file"
            />

        <TextView
            android:id="@+id/tvSDName"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/txt_sd_file"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/ivSDChecked"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_toRightOf="@+id/ivSD"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/ivSDChecked"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/checked"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/public_dividing_line1"
        />

    <RelativeLayout
        android:id="@+id/rlExt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivExt"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:layout_margin="10dp"
            android:src="@drawable/menuicon_file"
            />

        <TextView
            android:id="@+id/tvExtFolderName"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/txt_ext_file"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/ivExtChecked"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_toRightOf="@+id/ivExt"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/ivExtChecked"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/checked"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>

</LinearLayout>